crates/deadline-cli/tests/cli/snapshots/cli__config__config_show_verbose_prints_file_path_and_settings.snap
---
source: crates/deadline-cli/tests/cli/config.rs
info:
  program: deadline
  args:
    - config
    - show
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61204"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61204"
    AWS_ENDPOINT_URL_STS: "http://localhost:61204"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpagkZqJ/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpagkZqJ
---
success: true
exit_code: 0
----- stdout -----
AWS Deadline Cloud configuration file:
   [CONFIG_PATH]

deadline-cloud-monitor.path:  (default)
   The filesystem path to Deadline Cloud monitor, set during login process.

defaults.aws_profile_name: (default) (default)
   The AWS profile name to use by default. Set to '' to use the default
   credentials. Other settings are saved with the profile.

settings.job_history_dir: ~/.deadline/job_history/(default) (default)
   The directory in which to place the job submission history for this AWS
   profile name.

defaults.farm_id:  (default)
   The Farm ID to use by default.

settings.storage_profile_id:  (default)
   The storage profile that this workstation conforms to. It specifies where
   shared file systems are mounted, and where named job attachments should go.

defaults.queue_id:  (default)
   The Queue ID to use by default.

defaults.job_id:  (default)
   The Job ID to use by default. This gets updated by job submission, so is
   normally the most recently submitted job.

settings.auto_accept: false (default)
   Automatically accept the default choice for any interactive prompts.

settings.conflict_resolution: NOT_SELECTED (default)
   How to handle downloads if a file already exists

settings.log_level: WARNING (default)
   The logging level to use in the CLI and GUIs.

telemetry.opt_out: false (default)
   If set to 'true', don't record any telemetry events.

telemetry.identifier:  (default)
   A randomly generated identifier used to record telemetry events for this
   configuration.

defaults.job_attachments_file_system: COPIED (default)
   The file system mode to use for job attachments when running jobs. COPIED
   means to download a copy of the attachment data, VIRTUAL means to use a
   virtual file system for lazy loading.

settings.s3_max_pool_connections: 50 (default)
   The maximum number of connections to keep in the connection pool used by the
   S3's upload/download operations. If this value is not set, the default value
   of 50 is used. (Note: It's recommended setting this value above 10 to avoid
   'Connection pool is full' warnings during the uploads/downloads.)

settings.small_file_threshold_multiplier: 20 (default)
   When uploading job attachments, the file size threshold is set to separate
   'large' files from 'small' files so that 'large' files can be processed
   serially. This multiplier is used to calculate the size threshold. (Small
   files are defined as those smaller than or equal to the chunk size multiplied
   by this factor.)

settings.known_asset_paths:  (default)
   A list of paths that should not generate warnings when outside storage
   profile locations, separated by the OS path list separator (semicolon on
   Windows, colon on Linux/macOS).

settings.locale:  (default)
   The locale to use for the UI. If empty, uses the system locale.

settings.force_s3_check: false (default)
   Controls S3 verification behavior for job attachments. When 'true', always
   verify files exist in S3 via HEAD request before skipping upload (most
   reliable but slower, skips cache integrity check since every file is
   verified). When 'false' or unset, use local cache with periodic integrity
   sampling against S3 (balanced default).


----- stderr -----
